--- a/Projects/website_linux/templates/blog.html
+++ b/Projects/website_linux/templates/blog.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <h1>Blog</h1>
+<button type="button">Click Me!</button>
+
+<!--
+
 <p>
 {{ my_text}},{{ my_number}}
 {{ my_list}}
@@ -22,4 +26,8 @@
 	{% endif %}
 {% endfor %}
 </ul>
+</ul>
+
+-->
+
 {% endblock %}
