--- a/Projects/website_linux/templates/nav_bar.html
+++ b/Projects/website_linux/templates/nav_bar.html
@@ -1,8 +1,15 @@
 <nav>
-	<ul>
+
+<p> <a href= "/home" > Sam Kean </a> - <a href= "/blog" > Blog  </a> - <a href= "/planner" > Planner </a> </p>
+	
+
+<!--	<ul>
 		<li>Sam Kean</li>
 		<li>Blog</li>
 		<li>Timetable</li>
 		<li>Pomodoro</li>
 	</ul>
+
 </nav>
+
+-->
